--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -1,13 +1,10 @@
 name: Release-plz
 
-permissions:
-  pull-requests: write
-  contents: write
-
 on:
   push:
     branches: [ main ]
-
+  pull_request:
+    branches: [ "main" ]
 jobs:
   release-plz:
     runs-on: ubuntu-latest
