Update account ID version and repository URLs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "unc-account-id"
-version = "0.1.0"
-authors = ["Unc Inc <hello@nearprotocol.com>"]
+version = "0.7.2"
+authors = ["Unc Inc <hello@utnet.org>"]
 edition = "2021"
 description = "This crate contains the Account ID primitive and its validation facilities"
-repository = "https://github.com/near/near-account-id"
-license = "MIT OR Apache-2.0"
+repository = "https://github.com/utnet.org/unc-account-id"
+license = "GPL-2.0-or-later"
 publish = true
 
 [features]
 abi = ["borsh/unstable__schema", "schemars"]
-# This feature was introduced for legacy reasons for nearcore, and MUST be avoided
-# https://github.com/near/nearcore/pull/4621#issuecomment-892099860
+# This feature was introduced for legacy reasons for unccore, and MUST be avoided
+# https://github.com/utnet/utility/pull/4621#issuecomment-892099860
 internal_unstable = []
 default = []
 
